# meridian

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .yamllint.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.chaos.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  incident.md
.github/workflows/: chaos-test.yml  ci.yml  codeql.yml  docker-build.yml  docs.yml  lint.yml  perf-regression.yml  release.yml  stale.yml  trivy.yml
benchmarks/: README.md  agent_throughput.py  compare.py  controller_api_load.py  grafana-dashboard-perf.json  probe_scheduling.py
benchmarks/results/: README.md  baseline-v0.1.0.json
config/agent/: agent.yaml  probes.example.yaml
config/alertmanager/: alertmanager.yml  alerts.yml  inhibitions.yml  routes.yml
config/controller/: auth.yaml  (+1 more)
docs/: README.md  architecture.md  automation-guide.md  deployment.md  faq.md  incident-response.md  linux-operations.md  monitoring.md  network-design.md  observability.md  performance.md  runbooks.md  scaling.md  security.md  slo-catalog.md  system-design.md  testing.md  troubleshooting.md
examples/: README.md
incident-reports/: INC-001-cascading-dns-failure.md  INC-002-cgroup-memory-leak.md  INC-003-tcp-retransmit-mtu-mismatch.md  INC-004-prometheus-cardinality-explosion.md  README.md  template.md
libs/meridian_common/: pyproject.toml
libs/meridian_common/src/meridian_common/: __init__.py  healthcheck.py  jitter.py  logging.py  retry.py  timeutil.py
libs/meridian_proto/: pyproject.toml
libs/meridian_proto/src/meridian_proto/: __init__.py  alert.py  metric.py  probe.py  slo.py
runbooks/: README.md  agent-down.md  alert-storm.md  cert-rotation.md  controller-degraded.md  deploy-rollback.md  disk-full.md  dns-resolution-failure.md  high-error-budget-burn.md  network-partition.md  on-call-onboarding.md  postgres-failover.md  probe-storm.md  prometheus-oom.md  tcp-retransmit-storm.md
scripts/: README.md  bootstrap-dev.sh  check-slo-compliance.py  dns-debug.sh  export-incident-timeline.py  generate-certs.sh  healthcheck.sh  linux-baseline.sh  network-diag.sh  packet-capture.sh  seed-inventory.py  simulate-fleet.sh  tcp-debug.sh
services/agent/: Dockerfile  README.md  pyproject.toml
services/agent/src/meridian_agent/: __init__.py  __main__.py  buffer.py  config.py  exporter.py  heartbeat.py  log_shipper.py  runner.py  tls.py
services/agent/src/meridian_agent/probes/: __init__.py  base.py  dns.py  http.py  icmp.py  registry.py  tcp.py  traceroute.py
services/agent/src/meridian_agent/system/: __init__.py  cgroups.py  cpu.py  disk.py  memory.py  network.py  procfs.py
services/agent/systemd/: meridian-agent.service
services/agent/tests/: conftest.py
services/agent/tests/integration/: test_agent_lifecycle.py
services/agent/tests/unit/: test_buffer.py  test_config.py  test_probes_tcp.py
services/chaos/: Dockerfile  README.md  pyproject.toml
services/chaos/src/meridian_chaos/: __init__.py  __main__.py  runner.py
services/chaos/src/meridian_chaos/experiments/: __init__.py  base.py  cpu_pressure.py  disk_fill.py  memory_pressure.py  network_latency.py  network_loss.py  network_partition.py
services/chaos/tests/: test_runner.py
services/cli/: README.md  pyproject.toml
services/cli/src/meridianctl/: Dockerfile  __init__.py  client.py  formatters.py  main.py
services/cli/src/meridianctl/commands/: chaos.py  debug.py  incident.py  nodes.py  probes.py  slo.py
services/cli/src/meridianctl/tests/: test_cli_smoke.py
services/cli/tests/: test_cli_smoke.py
services/controller/: Dockerfile  README.md  alembic.ini  pyproject.toml
services/controller/migrations/alembic/: env.py
services/controller/migrations/alembic/versions/: 0001_initial_schema.py  0002_add_slo_table.py  0003_add_incident_table.py  0004_probe_assignment.py
services/controller/src/meridian_controller/: __init__.py  __main__.py  app.py  config.py  db.py
services/controller/src/meridian_controller/api/v1/: chaos.py  health.py  incidents.py  nodes.py  probes.py  slos.py
services/controller/src/meridian_controller/models/: __init__.py  incident.py  node.py  probe.py  slo.py
services/controller/src/meridian_controller/observability/: logging.py  metrics.py  tracing.py
services/controller/src/meridian_controller/services/: chaos_orchestrator.py  probe_distributor.py  registry_service.py  slo_evaluator.py
services/controller/tests/: conftest.py
services/controller/tests/unit/: test_slo_evaluator.py
tests/: README.md
tools/: ci-local.sh  docs-build.sh  format.sh  lint.sh  pre-commit.sh
(+97 files in other folders)
