[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "meridian-proto"
version = "0.1.0"
description = "Shared wire schemas / data contracts for Meridian"
requires-python = ">=3.11"
dependencies = ["pydantic~=2.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/meridian_proto"]
