[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "meridian-chaos"
version = "0.1.0"
description = "Chaos engineering execution layer for Meridian"
requires-python = ">=3.11"
dependencies = [
  "fastapi~=0.110",
  "uvicorn[standard]~=0.27",
  "pydantic~=2.6",
  "pydantic-settings~=2.2",
  "structlog~=24.1",
]

[project.scripts]
meridian-chaos = "meridian_chaos.__main__:main"

[project.optional-dependencies]
dev = ["pytest~=8.0", "pytest-asyncio~=0.23", "httpx~=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["src/meridian_chaos"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
