[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "meridianctl"
version = "0.1.0"
description = "Operator CLI for Meridian"
requires-python = ">=3.11"
dependencies = [
  "click~=8.1",
  "httpx~=0.27",
  "rich~=13.7",
  "PyYAML~=6.0",
  "structlog~=24.1",
]

[project.scripts]
meridianctl = "meridianctl.main:cli"

[project.optional-dependencies]
dev = ["pytest~=8.0", "pytest-asyncio~=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/meridianctl"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
